# rasterboy

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  SCENE_FORMAT.md
data/: example.xml
src/: image.rs  lib.rs  main.rs  math.rs  mesh.rs  raster2image.rs  rasterizer.rs  scene.rs
src/test/: image_tests.rs  math_tests.rs  mod.rs  scene_loading_tests.rs
