[package]
name = "rasterboy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "raster2image"
path = "src/raster2image.rs"

[lib]
name = "rasterboy"
path = "src/lib.rs"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
doc_markdown = "warn"
if_then_some_else_none = "warn"
manual_let_else = "warn"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
too_many_lines = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"
correctness = "deny"
